# cpp-rtype-shooter-epitech

./: .gitignore  to_patch.txt
Docs/: Client.dia  Scripting.md  Server.dia  rfc.txt  rfc.xml
R-Type/client/: .gitignore  FATAL_ERROR-in-building-of-script-o  client.pro  log
R-Type/client/config/: sprite.xml
R-Type/client/entity/includes/: IEntity.hpp
R-Type/client/includes/: Default.hpp  ECSManager.h  PortabilityBuilder.hpp  RTypeClient.hpp  UnixPortabilityBuilder.hpp  WindowsPortabilityBuilder.hpp
R-Type/client/includes/Audio/: MusicManager.hpp  SoundInputDevice.hpp  SoundManager.hpp  SoundOutputDevice.hpp  SoundPacketBuilder.hpp
R-Type/client/includes/Core/: BackgroundSystem.hpp  ButtonSystem.hpp  System.hpp  (+10 more)
R-Type/client/sources/: ECSManager.cpp  RTypeClient.cpp  UnixPortabilityBuilder.cpp  WindowsPortabilityBuilder.cpp  main.cpp
R-Type/server/: .gitignore  SIMON_TODO.txt  VALGRIND_ERROR_1  VALGRIND_ERROR_2  VALGRIND_ERROR_3  WindowsWSAHandler.cpp  WindowsWSAHandler.hpp  server.pro  simon_todo  valgrind
R-Type/server/files/: stage_1.map  stage_2.map
R-Type/server/includes/: Default.hpp  IResource.hpp  Observer.hpp  PortabilityBuilder.hpp  RTypeServer.hpp  UnixPortabilityBuilder.hpp  Utils.hpp  WindowsPortabilityBuilder.hpp
R-Type/server/sources/: PortabilityBuilder.cpp  RTypeServer.cpp  UnixPortabilityBuilder.cpp  Utils.cpp  WindowsPortabilityBuilder.cpp  main.cpp
R-Type/shared/entities/Monster/: CMakeLists.txt  Monster.cpp  Monster.hpp
R-Type/shared/entities/Player/: CMakeLists.txt  Player.cpp  Player.hpp
R-Type/shared/includes/: Config.hpp  IClientSocket.hpp  IResource.hpp  IRessource.hpp  IServerSocket.hpp  NoCopyable.hpp  Utils.hpp  Vertex.hpp
R-Type/shared/sources/: Utils.cpp
(+352 files in other folders)
